commetns on uditas.py

--- a/Polb_Demultiplex.ipynb
+++ b/Polb_Demultiplex.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#not sure if I need these\n",
+    "#not sure if I need these but they were in the uditas software\n",
     "class Error(Exception):\n",
     "    \"\"\"Base class for exceptions in this module.\"\"\"\n",
     "    pass\n",
@@ -633,7 +633,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
