adding notebook for looking for off target alignments

--- a/LAM Polb rev.ipynb
+++ b/LAM Polb rev.ipynb
@@ -116,31 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads\n"
+      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed\n"
      ]
     }
    ],
    "source": [
     "#Directory\n",
     "\n",
-    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_BCL2Fastq_only'\n",
+    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads'\n",
     "\n",
     "#this is a minimal directory of only 300 files for quick debugging\n",
-    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads'\n",
+    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed'\n",
     "\n",
     "print(directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 116,
    "metadata": {
     "scrolled": true
    },
@@ -178,26 +178,26 @@
        "I5_Index_ID                                                             P5_UMI_N505_Tn5-A\n",
        "index_I2                                                                             N505\n",
        "barcode_I2                                                                       CTCCTTAC\n",
-       "Unnamed: 16                                                                           NaN\n",
-       "Unnamed: 17                                                                           NaN\n",
+       "primer_outfwd                                                                         NaN\n",
+       "primer                                                                U1-C-PolB_Rev_nest1\n",
        "genome                                                                               hg38\n",
        "chr                                                                                  chr8\n",
-       "start                                                                         4.23504e+07\n",
-       "end                                                                           4.23504e+07\n",
+       "start                                                                            42350359\n",
+       "end                                                                              42350378\n",
        "strand                                                                                  -\n",
        "guide_1                                                                            Polb#3\n",
        "sequence_guide_1                                                     TAATTTTGTGTGGGTCACCC\n",
        "genome_guide_1                                                                       hg38\n",
        "chr_guide_1                                                                          chr8\n",
-       "start_guide_1                                                                 4.23499e+07\n",
-       "end_guide_1                                                                   4.23499e+07\n",
+       "start_guide_1                                                                    42349873\n",
+       "end_guide_1                                                                      42349892\n",
        "strand_guide_1                                                                          +\n",
        "guide_2                                                                            Polb#4\n",
        "sequence_guide_2                                                     TGAAACCAGTTTGGTTACCC\n",
        "genome_guide_2                                                                       hg38\n",
        "chr_guide_2                                                                          chr8\n",
-       "start_guide_2                                                                 4.23503e+07\n",
-       "end_guide_2                                                                   4.23503e+07\n",
+       "start_guide_2                                                                    42350280\n",
+       "end_guide_2                                                                      42350299\n",
        "strand_guide_2                                                                          +\n",
        "guide_3                                                                               NaN\n",
        "sequence_guide_3                                                                      NaN\n",
@@ -215,7 +215,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "19"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this function is for preparing LAM files made by Misha for \n",
     "\n",
-    "# The adapter sequence is in read 2 : ACTATAGGGCACGCGTG\n",
+    "# The adapter sequence is in read 2 : GACTATAGGGCACGCGTGG\n",
     "# both read 1 and 2 have 5nt of UMI NNNNN\n",
     "\n",
     "def umi_joining(dir_sample, amplicon_info):\n",
@@ -638,15 +638,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of reads: 500\n",
-      "number of unique umis 500\n"
+      "number of reads: 455257\n",
+      "number of unique umis 353635\n"
      ]
     }
    ],
@@ -797,15 +797,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reads_in_experiment_list_count 475\n",
-      "reads_not_in_experiment_list_count 25\n"
+      "reads_in_experiment_list_count 434391\n",
+      "reads_not_in_experiment_list_count 20866\n"
      ]
     }
    ],
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "'replace'"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1632,8 +1632,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
+       "      <td>24037</td>\n",
+       "      <td>23676</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1644,10 +1644,10 @@
        "0                                0                                          0   \n",
        "\n",
        "   plasmid_only_total_reads  plasmid_only_total_reads_collapsed  \n",
-       "0                        23                                  23  "
+       "0                     24037                               23676  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,15 +1885,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of reads before mispriming cleanup 500\n",
-      "number of unique umis before mispriming cleanup 500\n"
+      "number of reads before mispriming cleanup 455257\n",
+      "number of unique umis before mispriming cleanup 353635\n"
      ]
     },
     {
@@ -1924,8 +1924,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>365</td>\n",
-       "      <td>365</td>\n",
+       "      <td>325610</td>\n",
+       "      <td>270389</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1933,10 +1933,10 @@
       ],
       "text/plain": [
        "   all_amplicons_total_reads  all_amplicons_total_reads_collapsed\n",
-       "0                        365                                  365"
+       "0                     325610                               270389"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2386,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -2436,16 +2436,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>920</td>\n",
+       "      <td>173</td>\n",
+       "      <td>173</td>\n",
        "      <td>0</td>\n",
+       "      <td>917</td>\n",
+       "      <td>172</td>\n",
+       "      <td>172</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51</td>\n",
-       "      <td>38</td>\n",
+       "      <td>41663</td>\n",
+       "      <td>32999</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2456,7 +2456,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>262.0</td>\n",
+       "      <td>263.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2465,19 +2465,19 @@
       ],
       "text/plain": [
        "   wt_cut1_total_reads  wt_cut1_total_indels  wt_cut1_total_deletions  \\\n",
-       "0                    0                     0                        0   \n",
+       "0                  920                   173                      173   \n",
        "\n",
        "   wt_cut1_total_insertions  wt_cut1_total_reads_collapsed  \\\n",
-       "0                         0                              0   \n",
+       "0                         0                            917   \n",
        "\n",
        "   wt_cut1_total_indels_collapsed  wt_cut1_total_deletions_collapsed  \\\n",
-       "0                               0                                  0   \n",
+       "0                             172                                172   \n",
        "\n",
        "   wt_cut1_total_insertions_collapsed  wt_cut2_total_reads  \\\n",
-       "0                                   0                   51   \n",
+       "0                                   0                41663   \n",
        "\n",
        "   wt_cut2_total_indels  ...  1a_1a_cut1_total_insertions_collapsed  \\\n",
-       "0                    38  ...                                      0   \n",
+       "0                 32999  ...                                      0   \n",
        "\n",
        "   2b_2b_cut1_total_reads  2b_2b_cut1_total_indels  \\\n",
        "0                       0                        0   \n",
@@ -2492,12 +2492,12 @@
        "0                                     0   \n",
        "\n",
        "   2b_2b_cut1_total_insertions_collapsed  median_fragment_size  \n",
-       "0                                      0                 262.0  \n",
+       "0                                      0                 263.0  \n",
        "\n",
        "[1 rows x 113 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
